--- a/css/style.css
+++ b/css/style.css
@@ -2,64 +2,46 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
-.search-field {
-  border: none;
-  border-radius: 50px;
-  padding: 5px;
-  outline: none;
-}
-.search-field:hover {
-  outline: none;
-  border: none;
-}
-.search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
-  border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
-}
-.search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
-}
+/* =========== All Dynamically uploaded product design =========== */
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* border: 1px solid black; */
   text-align: center;
   width: 100%;
   margin: auto;
   align-items: center;
   justify-content: center;
 }
+/* ========== Single product style ============= */
 .single-product {
   padding: 10px;
   transition: 0.6s;
 }
 .single-product:hover {
-  box-shadow: 4px 4px 7px gray;
+  box-shadow: 0px -2px 8px grey;
   border-radius: 10px;
-  border: 1px solid cyan;
 }
 .product-image {
   width: 150px;
   height: 150px;
 }
+/* ============= Heading style =========== */
+.easy-shop{
+  color: chocolate;
+}
 .cart {
   width: 350px;
-  /* border: 1px solid green; */
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
+  /* background-color:#d2691e73; */
 }
 .cart-main {
   padding-right: 30px;
 }
+/* ========== Media quearly =========== */
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
