--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
+/* ============= Heading style =========== */
+.easy-shop{
+  color: chocolate;
+}
 /* =========== All Dynamically uploaded product design =========== */
 #all-products {
   display: grid;
@@ -14,20 +18,28 @@ body {
 }
 /* ========== Single product style ============= */
 .single-product {
-  padding: 10px;
-  transition: 0.6s;
+  padding: 8px 5px 5px 5px;
+  background-color: white;
+  height: 450px;
+  margin: 5px;
+  border-radius: 5px;
 }
 .single-product:hover {
   box-shadow: 0px -2px 8px grey;
   border-radius: 10px;
+  background-color:blue;
+  color: white;
 }
 .product-image {
-  width: 150px;
-  height: 150px;
+  width: 170px;
+  height: 170px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 30px;
 }
-/* ============= Heading style =========== */
-.easy-shop{
-  color: chocolate;
+/* ======= curt style ====== */
+.easyshop-cart{
+  color: white;
 }
 .cart {
   width: 350px;
@@ -36,11 +48,16 @@ body {
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
-  /* background-color:#d2691e73; */
+  background-color: blue;
+  color: white;
+  
 }
 .cart-main {
   padding-right: 30px;
+  color: white;
+  
 }
+
 /* ========== Media quearly =========== */
 @media only screen and (max-width: 768px) {
   #all-products {
