--- a/css/style.css
+++ b/css/style.css
@@ -27,20 +27,16 @@ body {
 .single-product:hover {
   box-shadow: 0px -2px 8px grey;
   border-radius: 10px;
-  background-color:blue;
-  color: white;
+ 
 }
 .product-image {
-  width: 170px;
-  height: 170px;
+  width: 150px;
+  height: 150px;
   padding-top: 10px;
   padding-bottom: 10px;
   border-radius: 30px;
 }
 /* ======= curt style ====== */
-.easyshop-cart{
-  color: white;
-}
 .cart {
   width: 350px;
   padding: 10px;
@@ -48,16 +44,12 @@ body {
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
-  background-color: blue;
-  color: white;
-  
+  background-color:rgb(173 167 162 / 90%);
+ 
 }
 .cart-main {
   padding-right: 30px;
-  color: white;
-  
 }
-
 /* ========== Media quearly =========== */
 @media only screen and (max-width: 768px) {
   #all-products {
